--- a/1_task/2_task.csproj
+++ b/1_task/2_task.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
-    <RootNamespace>_1_task</RootNamespace>
+    <RootNamespace>2_task</RootNamespace>
   </PropertyGroup>
 
 </Project>
